modules/network/internet_gateway.tf
#============================================
# Internet Gateway to be used to public subnets
#============================================
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = merge(
    var.tags,
    {
      Name = "${var.project_name}-igw"
    }
  )
}
